# mcprotocol-rs

./: Cargo.toml  README.md
.circleci/: config.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  packet.rs  packet_id.rs  protocol.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
