[package]
name = "mcprotocol-rs"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lib]
name = "mcprotocol"

[dependencies]
varint = "0.9.0"
mc-varint = "0.1.1"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

